trying to fix PDF width on iphone

--- a/styles/disp.css
+++ b/styles/disp.css
@@ -105,3 +105,4 @@ font.wait{
   font-size: large;
 }
 
+#pdf > img { width: 100%; }
